[gd_scene load_steps=8 format=3 uid="uid://ncwq3wa6d6xq"]

[ext_resource type="PackedScene" uid="uid://b7i0apn6kf16y" path="res://Player/player.tscn" id="2_dooct"]
[ext_resource type="Texture2D" uid="uid://ct06gao5108ch" path="res://Assets/Images/tilemap.png" id="2_wkdnv"]
[ext_resource type="Script" path="res://Levels/Exit.gd" id="3_352qg"]
[ext_resource type="Texture2D" uid="uid://datn6xcj503mj" path="res://Assets/Images/Green.jpg" id="3_fldpb"]
[ext_resource type="Texture2D" uid="uid://cqmhfkerb71hg" path="res://Assets/Images/Red.jpg" id="5_v8xot"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_n8sb2"]
texture = ExtResource("2_wkdnv")
4:3/0 = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_nsirm"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_n8sb2")

[node name="Level1" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_nsirm")
format = 2
layer_0/tile_data = PackedInt32Array(2555904, 262144, 3, 2490368, 262144, 3, 2424832, 262144, 3, 2359296, 262144, 3, 2293760, 262144, 3, 2228224, 262144, 3, 2162688, 262144, 3, 2097152, 262144, 3, 2031616, 262144, 3, 1966080, 262144, 3, 1900544, 262144, 3, 1835008, 262144, 3, 1769472, 262144, 3, 1703936, 262144, 3, 1638400, 262144, 3, 1572864, 262144, 3, 1507328, 262144, 3, 1441792, 262144, 3, 1376256, 262144, 3, 1310720, 262144, 3, 1245184, 262144, 3, 1179648, 262144, 3, 1114112, 262144, 3, 1048576, 262144, 3, 983040, 262144, 3, 917504, 262144, 3, 851968, 262144, 3, 786432, 262144, 3, 720896, 262144, 3, 655360, 262144, 3, 589824, 262144, 3, 524288, 262144, 3, 393216, 262144, 3, 327680, 262144, 3, 262144, 262144, 3, 196608, 262144, 3, 131072, 262144, 3, 65536, 262144, 3, 0, 262144, 3, 1, 262144, 3, 2, 262144, 3, 3, 262144, 3, 4, 262144, 3, 5, 262144, 3, 6, 262144, 3, 7, 262144, 3, 8, 262144, 3, 9, 262144, 3, 10, 262144, 3, 11, 262144, 3, 12, 262144, 3, 13, 262144, 3, 14, 262144, 3, 15, 262144, 3, 16, 262144, 3, 17, 262144, 3, 18, 262144, 3, 19, 262144, 3, 20, 262144, 3, 21, 262144, 3, 22, 262144, 3, 23, 262144, 3, 24, 262144, 3, 25, 262144, 3, 26, 262144, 3, 27, 262144, 3, 28, 262144, 3, 29, 262144, 3, 30, 262144, 3, 31, 262144, 3, 32, 262144, 3, 33, 262144, 3, 34, 262144, 3, 35, 262144, 3, 36, 262144, 3, 37, 262144, 3, 38, 262144, 3, 39, 262144, 3, 40, 262144, 3, 41, 262144, 3, 42, 262144, 3, 43, 262144, 3, 44, 262144, 3, 45, 262144, 3, 46, 262144, 3, 47, 262144, 3, 48, 262144, 3, 49, 262144, 3, 50, 262144, 3, 51, 262144, 3, 52, 262144, 3, 53, 262144, 3, 54, 262144, 3, 55, 262144, 3, 56, 262144, 3, 57, 262144, 3, 58, 262144, 3, 59, 262144, 3, 60, 262144, 3, 61, 262144, 3, 62, 262144, 3, 63, 262144, 3, 64, 262144, 3, 65, 262144, 3, 66, 262144, 3, 67, 262144, 3, 68, 262144, 3, 69, 262144, 3, 70, 262144, 3, 71, 262144, 3, 2555905, 262144, 3, 2555906, 262144, 3, 2555907, 262144, 3, 2555908, 262144, 3, 2555909, 262144, 3, 2555910, 262144, 3, 2555911, 262144, 3, 2555912, 262144, 3, 2555913, 262144, 3, 2555914, 262144, 3, 2555915, 262144, 3, 2555916, 262144, 3, 2555917, 262144, 3, 2555918, 262144, 3, 2555919, 262144, 3, 2555920, 262144, 3, 2555921, 262144, 3, 2555922, 262144, 3, 2555923, 262144, 3, 2555924, 262144, 3, 2555925, 262144, 3, 2555926, 262144, 3, 2555927, 262144, 3, 2555928, 262144, 3, 2555929, 262144, 3, 2555930, 262144, 3, 2555931, 262144, 3, 2555932, 262144, 3, 2555933, 262144, 3, 2555934, 262144, 3, 2555935, 262144, 3, 2555937, 262144, 3, 2555938, 262144, 3, 2555939, 262144, 3, 2555940, 262144, 3, 2555941, 262144, 3, 2555942, 262144, 3, 2555943, 262144, 3, 2555944, 262144, 3, 2555945, 262144, 3, 2555946, 262144, 3, 2555947, 262144, 3, 2555948, 262144, 3, 2555949, 262144, 3, 2555950, 262144, 3, 2555951, 262144, 3, 2555952, 262144, 3, 2555953, 262144, 3, 2555954, 262144, 3, 2555955, 262144, 3, 2555956, 262144, 3, 2555957, 262144, 3, 2555958, 262144, 3, 2555959, 262144, 3, 2555960, 262144, 3, 2555961, 262144, 3, 2555962, 262144, 3, 2555963, 262144, 3, 2555964, 262144, 3, 2555965, 262144, 3, 2555966, 262144, 3, 2555967, 262144, 3, 2555968, 262144, 3, 2555969, 262144, 3, 2555970, 262144, 3, 2555971, 262144, 3, 2555972, 262144, 3, 2555973, 262144, 3, 2555974, 262144, 3, 2555975, 262144, 3, 1376286, 262144, 3, 1310750, 262144, 3, 1245214, 262144, 3, 1245215, 262144, 3, 1245216, 262144, 3, 1245217, 262144, 3, 1245218, 262144, 3, 1310754, 262144, 3, 1376290, 262144, 3, 1441826, 262144, 3, 1441825, 262144, 3, 1441822, 262144, 3, 1441823, 262144, 3, 131143, 262144, 3, 196679, 262144, 3, 262215, 262144, 3, 327751, 262144, 3, 393287, 262144, 3, 458823, 262144, 3, 524359, 262144, 3, 589895, 262144, 3, 655431, 262144, 3, 720967, 262144, 3, 786503, 262144, 3, 852039, 262144, 3, 917575, 262144, 3, 983111, 262144, 3, 1048647, 262144, 3, 1114183, 262144, 3, 1179719, 262144, 3, 1245255, 262144, 3, 1310791, 262144, 3, 1376327, 262144, 3, 1441863, 262144, 3, 1507399, 262144, 3, 1572935, 262144, 3, 1638471, 262144, 3, 1704007, 262144, 3, 1769543, 262144, 3, 1835079, 262144, 3, 1900615, 262144, 3, 1966151, 262144, 3, 2031687, 262144, 3, 2097223, 262144, 3, 2162759, 262144, 3, 2228295, 262144, 3, 2293831, 262144, 3, 2359367, 262144, 3, 2424903, 262144, 3, 2490439, 262144, 3, 1179681, 262144, 3, 1114145, 262144, 3, 1245219, 262144, 3, 1245220, 262144, 3, 1245221, 262144, 3, 1179685, 262144, 3, 1114149, 262144, 3, 1114147, 262144, 3, 1048611, 262144, 3, 983075, 262144, 3, 983076, 262144, 3, 983077, 262144, 3, 983074, 262144, 3, 983073, 262144, 3, 983072, 262144, 3, 983071, 262144, 3, 983070, 262144, 3, 983069, 262144, 3, 983068, 262144, 3, 1114143, 262144, 3, 1114142, 262144, 3, 1114141, 262144, 3, 1114140, 262144, 3, 1179676, 262144, 3, 1245212, 262144, 3, 1245211, 262144, 3, 1245210, 262144, 3, 1179674, 262144, 3, 1114138, 262144, 3, 1310746, 262144, 3, 1441818, 262144, 3, 1376282, 262144, 3, 1507354, 262144, 3, 1638426, 262144, 3, 1572890, 262144, 3, 1703962, 262144, 3, 1376285, 262144, 3, 1376284, 262144, 3, 1572891, 262144, 3, 1572892, 262144, 3, 1507359, 262144, 3, 1572895, 262144, 3, 1507361, 262144, 3, 1638433, 262144, 3, 1572897, 262144, 3, 1441827, 262144, 3, 1507363, 262144, 3, 1572899, 262144, 3, 1572900, 262144, 3, 1572901, 262144, 3, 1703969, 262144, 3, 1703968, 262144, 3, 1703967, 262144, 3, 1703966, 262144, 3, 1703965, 262144, 3, 1703970, 262144, 3, 1703971, 262144, 3, 1703973, 262144, 3, 1703972, 262144, 3, 1376293, 262144, 3, 1441829, 262144, 3, 1376294, 262144, 3, 1376295, 262144, 3, 1310759, 262144, 3, 1245223, 262144, 3, 1179687, 262144, 3, 1114151, 262144, 3, 1048615, 262144, 3, 983079, 262144, 3, 1441831, 262144, 3, 1572903, 262144, 3, 1507367, 262144, 3, 1638439, 262144, 3, 1703975, 262144, 3, 983081, 262144, 3, 1048617, 262144, 3, 1114153, 262144, 3, 1179689, 262144, 3, 1245225, 262144, 3, 1245226, 262144, 3, 1245227, 262144, 3, 1179691, 262144, 3, 1114155, 262144, 3, 1048619, 262144, 3, 1376297, 262144, 3, 1441833, 262144, 3, 1507369, 262144, 3, 1572905, 262144, 3, 1638441, 262144, 3, 1703977, 262144, 3, 1507370, 262144, 3, 1507371, 262144, 3, 1507372, 262144, 3, 1376299, 262144, 3, 1376300, 262144, 3, 1376301, 262144, 3, 1376302, 262144, 3, 1376303, 262144, 3, 1376304, 262144, 3, 1376305, 262144, 3, 1769513, 262144, 3, 1769514, 262144, 3, 1769515, 262144, 3, 1769516, 262144, 3, 1638443, 262144, 3, 1638444, 262144, 3, 1441838, 262144, 3, 1507374, 262144, 3, 1572910, 262144, 3, 1638446, 262144, 3, 1703982, 262144, 3, 1769518, 262144, 3, 1835054, 262144, 3, 1900590, 262144, 3, 1900589, 262144, 3, 1900588, 262144, 3, 1900587, 262144, 3, 1310766, 262144, 3, 1310765, 262144, 3, 1245229, 262144, 3, 1245230, 262144, 3, 1179694, 262144, 3, 1179693, 262144, 3, 1114157, 262144, 3, 1114158, 262144, 3, 1048622, 262144, 3, 1048621, 262144, 3, 983085, 262144, 3, 983086, 262144, 3, 917550, 262144, 3, 917549, 262144, 3, 852013, 262144, 3, 852014, 262144, 3, 852012, 262144, 3, 852011, 262144, 3, 1179697, 262144, 3, 1179696, 262144, 3, 1179698, 262144, 3, 1179699, 262144, 3, 1048627, 262144, 3, 1114163, 262144, 3, 983091, 262144, 3, 917555, 262144, 3, 1048626, 262144, 3, 1048625, 262144, 3, 1048624, 262144, 3, 852019, 262144, 3, 786483, 262144, 3, 720947, 262144, 3, 786482, 262144, 3, 786481, 262144, 3, 917553, 262144, 3, 917554, 262144, 3, 1179695, 262144, 3, 1179700, 262144, 3, 1179701, 262144, 3, 1179702, 262144, 3, 1179703, 262144, 3, 1179704, 262144, 3, 1179705, 262144, 3, 1114169, 262144, 3, 1048633, 262144, 3, 983097, 262144, 3, 917561, 262144, 3, 1114166, 262144, 3, 1048630, 262144, 3, 983094, 262144, 3, 917558, 262144, 3, 1245241, 262144, 3, 1245242, 262144, 3, 1245243, 262144, 3, 1245244, 262144, 3, 1310780, 262144, 3, 1376316, 262144, 3, 1441852, 262144, 3, 1507388, 262144, 3, 1572924, 262144, 3, 1638460, 262144, 3, 1703996, 262144, 3, 1048637, 262144, 3, 983101, 262144, 3, 917565, 262144, 3, 852029, 262144, 3, 786493, 262144, 3, 720957, 262144, 3, 655421, 262144, 3, 655420, 262144, 3, 655419, 262144, 3, 655418, 262144, 3, 655417, 262144, 3, 458813, 262144, 3, 458812, 262144, 3, 458811, 262144, 3, 458810, 262144, 3, 458809, 262144, 3, 1835040, 262144, 3, 1835041, 262144, 3, 1835042, 262144, 3, 1835043, 262144, 3, 1900578, 262144, 3, 1966114, 262144, 3, 2031650, 262144, 3, 2097186, 262144, 3, 1900576, 262144, 3, 1966112, 262144, 3, 2031648, 262144, 3, 2097184, 262144, 3, 1835046, 262144, 3, 1835047, 262144, 3, 1900583, 262144, 3, 1966119, 262144, 3, 2031655, 262144, 3, 2097191, 262144, 3, 1966118, 262144, 3, 1966117, 262144, 3, 1966116, 262144, 3, 2162727, 262144, 3, 2228263, 262144, 3, 2228264, 262144, 3, 2162728, 262144, 3, 2162729, 262144, 3, 2162730, 262144, 3, 2162731, 262144, 3, 2228267, 262144, 3, 2228268, 262144, 3, 2228269, 262144, 3, 2228270, 262144, 3, 2228271, 262144, 3, 2293800, 262144, 3, 2359336, 262144, 3, 2293802, 262144, 3, 2359338, 262144, 3, 2228266, 262144, 3, 1966121, 262144, 3, 1900585, 262144, 3, 1900586, 262144, 3, 2031658, 262144, 3, 2031659, 262144, 3, 2031660, 262144, 3, 2031661, 262144, 3, 2031662, 262144, 3, 2031663, 262144, 3, 2031657, 262144, 3, 1835055, 262144, 3, 1900591, 262144, 3, 1441841, 262144, 3, 1507377, 262144, 3, 1572913, 262144, 3, 1638449, 262144, 3, 1703985, 262144, 3, 1769521, 262144, 3, 1376307, 262144, 3, 1310771, 262144, 3, 1245235, 262144, 3, 1441845, 262144, 3, 1507381, 262144, 3, 1572917, 262144, 3, 1638453, 262144, 3, 1703989, 262144, 3, 1507382, 262144, 3, 1507383, 262144, 3, 1507384, 262144, 3, 1507385, 262144, 3, 1245239, 262144, 3, 1310775, 262144, 3, 1376311, 262144, 3, 1441847, 262144, 3, 1245237, 262144, 3, 1310773, 262144, 3, 1507386, 262144, 3, 1441850, 262144, 3, 1376314, 262144, 3, 852002, 262144, 3, 786466, 262144, 3, 720930, 262144, 3, 655394, 262144, 3, 589858, 262144, 3, 720931, 262144, 3, 720932, 262144, 3, 720933, 262144, 3, 589857, 262144, 3, 589856, 262144, 3, 589855, 262144, 3, 196629, 262144, 3, 262165, 262144, 3, 327701, 262144, 3, 393237, 262144, 3, 458773, 262144, 3, 458772, 262144, 3, 524308, 262144, 3, 589844, 262144, 3, 655380, 262144, 3, 720916, 262144, 3, 786452, 262144, 3, 851988, 262144, 3, 917524, 262144, 3, 458771, 262144, 3, 458770, 262144, 3, 524306, 262144, 3, 524305, 262144, 3, 524304, 262144, 3, 524303, 262144, 3, 524302, 262144, 3, 262147, 262144, 3, 327683, 262144, 3, 327684, 262144, 3, 393220, 262144, 3, 393221, 262144, 3, 458758, 262144, 3, 524294, 262144, 3, 524295, 262144, 3, 262154, 262144, 3, 327690, 262144, 3, 393226, 262144, 3, 458762, 262144, 3, 524298, 262144, 3, 589834, 262144, 3, 655370, 262144, 3, 720906, 262144, 3, 786442, 262144, 3, 851978, 262144, 3, 720897, 262144, 3, 720898, 262144, 3, 720899, 262144, 3, 720900, 262144, 3, 720901, 262144, 3, 851972, 262144, 3, 917508, 262144, 3, 983044, 262144, 3, 1048580, 262144, 3, 1114116, 262144, 3, 1179652, 262144, 3, 1245188, 262144, 3, 1310724, 262144, 3, 1376260, 262144, 3, 1441796, 262144, 3, 1441800, 262144, 3, 1441801, 262144, 3, 1441802, 262144, 3, 1507339, 262144, 3, 1507340, 262144, 3, 1507341, 262144, 3, 1900548, 262144, 3, 1900549, 262144, 3, 1900550, 262144, 3, 1900551, 262144, 3, 1900552, 262144, 3, 1900553, 262144, 3, 1900554, 262144, 3, 1900555, 262144, 3, 1900556, 262144, 3, 1376263, 262144, 3, 1441799, 262144, 3, 1507335, 262144, 3, 1572871, 262144, 3, 1638407, 262144, 3, 1703943, 262144, 3, 1769479, 262144, 3, 1835015, 262144, 3, 2228227, 262144, 3, 2228228, 262144, 3, 2228229, 262144, 3, 2228230, 262144, 3, 2228231, 262144, 3, 2293767, 262144, 3, 2293768, 262144, 3, 2293769, 262144, 3, 2293770, 262144, 3, 1966087, 262144, 3, 2031623, 262144, 3, 2097159, 262144, 3, 2162695, 262144, 3, 2359306, 262144, 3, 2424842, 262144, 3, 2490378, 262144, 3, 2293766, 262144, 3, 2359302, 262144, 3, 2359303, 262144, 3, 2359304, 262144, 3, 2359305, 262144, 3, 1638401, 262144, 3, 1638402, 262144, 3, 1638403, 262144, 3, 1638404, 262144, 3, 1638405, 262144, 3, 1376257, 262144, 3, 1376258, 262144, 3, 1179649, 262144, 3, 1179650, 262144, 3, 983041, 262144, 3, 983042, 262144, 3, 983043, 262144, 3, 786434, 262144, 3, 851970, 262144, 3, 524289, 262144, 3, 524290, 262144, 3, 524291, 262144, 3, 524292, 262144, 3, 524293, 262144, 3, 262146, 262144, 3, 196610, 262144, 3, 131074, 262144, 3, 131077, 262144, 3, 131078, 262144, 3, 131079, 262144, 3, 196615, 262144, 3, 196616, 262144, 3, 131080, 262144, 3, 65544, 262144, 3, 262151, 262144, 3, 327687, 262144, 3, 262150, 262144, 3, 196614, 262144, 3, 196613, 262144, 3, 65541, 262144, 3, 65542, 262144, 3, 65543, 262144, 3, 131081, 262144, 3, 131082, 262144, 3, 131083, 262144, 3, 131084, 262144, 3, 131085, 262144, 3, 131086, 262144, 3, 196622, 262144, 3, 196623, 262144, 3, 131087, 262144, 3, 196621, 262144, 3, 262157, 262144, 3, 327693, 262144, 3, 393229, 262144, 3, 458765, 262144, 3, 458766, 262144, 3, 262156, 262144, 3, 327692, 262144, 3, 393234, 262144, 3, 327698, 262144, 3, 262162, 262144, 3, 196626, 262144, 3, 327697, 262144, 3, 327696, 262144, 3, 327695, 262144, 3, 655371, 262144, 3, 655372, 262144, 3, 589836, 262144, 3, 655373, 262144, 3, 655374, 262144, 3, 655367, 262144, 3, 720903, 262144, 3, 786439, 262144, 3, 851975, 262144, 3, 917511, 262144, 3, 720904, 262144, 3, 720905, 262144, 3, 983047, 262144, 3, 983048, 262144, 3, 983049, 262144, 3, 1048583, 262144, 3, 1114119, 262144, 3, 1179655, 262144, 3, 1179656, 262144, 3, 1179657, 262144, 3, 917519, 262144, 3, 917518, 262144, 3, 983054, 262144, 3, 1048590, 262144, 3, 1114126, 262144, 3, 1179662, 262144, 3, 1245198, 262144, 3, 1310734, 262144, 3, 720912, 262144, 3, 720913, 262144, 3, 786449, 262144, 3, 851985, 262144, 3, 851986, 262144, 3, 917522, 262144, 3, 983058, 262144, 3, 1048594, 262144, 3, 1114130, 262144, 3, 1179666, 262144, 3, 1245202, 262144, 3, 1310738, 262144, 3, 1376274, 262144, 3, 1441810, 262144, 3, 1507346, 262144, 3, 1572882, 262144, 3, 1638418, 262144, 3, 1638417, 262144, 3, 1572881, 262144, 3, 1835022, 262144, 3, 1835023, 262144, 3, 1900560, 262144, 3, 1900561, 262144, 3, 1900562, 262144, 3, 1966098, 262144, 3, 2031634, 262144, 3, 2097170, 262144, 3, 2293775, 262144, 3, 2293776, 262144, 3, 2293777, 262144, 3, 2293778, 262144, 3, 2293779, 262144, 3, 2359315, 262144, 3, 2359316, 262144, 3, 2359317, 262144, 3, 2293781, 262144, 3, 2293782, 262144, 3, 2228246, 262144, 3, 2162710, 262144, 3, 2097174, 262144, 3, 2031638, 262144, 3, 1966102, 262144, 3, 1900566, 262144, 3, 1703939, 262144, 3, 1769475, 262144, 3, 1966081, 262144, 3, 1966082, 262144, 3, 2097153, 262144, 3, 2097154, 262144, 3, 2097155, 262144, 3, 2097156, 262144, 3, 2097157, 262144, 3, 1966085, 262144, 3, 2359297, 262144, 3, 2359298, 262144, 3, 2359299, 262144, 3, 2424835, 262144, 3, 2424838, 262144, 3, 2424837, 262144, 3, 2359301, 262144, 3, 2293765, 262144, 3, 1966091, 262144, 3, 2031627, 262144, 3, 2097163, 262144, 3, 2097162, 262144, 3, 2097161, 262144, 3, 2097164, 262144, 3, 2162700, 262144, 3, 2228236, 262144, 3, 2293772, 262144, 3, 2490381, 262144, 3, 2424845, 262144, 3, 2162702, 262144, 3, 2162703, 262144, 3, 2162704, 262144, 3, 1966093, 262144, 3, 1966094, 262144, 3, 1966095, 262144, 3, 2031631, 262144, 3, 2031632, 262144, 3, 1507338, 262144, 3, 1572874, 262144, 3, 1638410, 262144, 3, 1703946, 262144, 3, 1769481, 262144, 3, 1179654, 262144, 3, 1048581, 262144, 3, 917510, 262144, 3, 2424853, 262144, 3, 2490389, 262144, 3, 2228248, 262144, 3, 2228249, 262144, 3, 2228250, 262144, 3, 2228251, 262144, 3, 2228252, 262144, 3, 1900570, 262144, 3, 1966106, 262144, 3, 2031642, 262144, 3, 2031643, 262144, 3, 2097179, 262144, 3, 1835035, 262144, 3, 1900573, 262144, 3, 1966109, 262144, 3, 2031645, 262144, 3, 2031646, 262144, 3, 2162718, 262144, 3, 2228254, 262144, 3, 2293790, 262144, 3, 2359326, 262144, 3, 2359325, 262144, 3, 2359324, 262144, 3, 2359323, 262144, 3, 2359322, 262144, 3, 2293793, 262144, 3, 2293794, 262144, 3, 2293795, 262144, 3, 2293796, 262144, 3, 2228260, 262144, 3, 2162724, 262144, 3, 2162723, 262144, 3, 2162722, 262144, 3, 2359329, 262144, 3, 2424865, 262144, 3, 2490401, 262144, 3, 2293791, 262144, 3, 2293792, 262144, 3, 1835036, 262144, 3, 1703958, 262144, 3, 1703957, 262144, 3, 1703956, 262144, 3, 1703955, 262144, 3, 1441811, 262144, 3, 1441812, 262144, 3, 1441813, 262144, 3, 1441814, 262144, 3, 1245209, 262144, 3, 1245208, 262144, 3, 1245207, 262144, 3, 1245206, 262144, 3, 1245205, 262144, 3, 1310744, 262144, 3, 1310745, 262144, 3, 1048595, 262144, 3, 1048596, 262144, 3, 1048597, 262144, 3, 1048598, 262144, 3, 1114134, 262144, 3, 1114125, 262144, 3, 1114124, 262144, 3, 1114123, 262144, 3, 983053, 262144, 3, 983052, 262144, 3, 983051, 262144, 3, 1114127, 262144, 3, 1114128, 262144, 3, 1179664, 262144, 3, 1310735, 262144, 3, 1310736, 262144, 3, 720909, 262144, 3, 786445, 262144, 3, 786444, 262144, 3, 458764, 262144, 3, 393228, 262144, 3, 131090, 262144, 3, 131093, 262144, 3, 131092, 262144, 3, 196628, 262144, 3, 655381, 262144, 3, 655382, 262144, 3, 655383, 262144, 3, 589847, 262144, 3, 524311, 262144, 3, 262166, 262144, 3, 262167, 262144, 3, 262168, 262144, 3, 262169, 262144, 3, 327705, 262144, 3, 393241, 262144, 3, 458777, 262144, 3, 65561, 262144, 3, 131097, 262144, 3, 196636, 262144, 3, 196637, 262144, 3, 131101, 262144, 3, 65565, 262144, 3, 196640, 262144, 3, 131104, 262144, 3, 65568, 262144, 3, 327707, 262144, 3, 327708, 262144, 3, 327709, 262144, 3, 327710, 262144, 3, 327711, 262144, 3, 327712, 262144, 3, 327713, 262144, 3, 262176, 262144, 3, 524315, 262144, 3, 589851, 262144, 3, 655387, 262144, 3, 720923, 262144, 3, 720922, 262144, 3, 720921, 262144, 3, 786457, 262144, 3, 851993, 262144, 3, 851992, 262144, 3, 851991, 262144, 3, 917527, 262144, 3, 851995, 262144, 3, 851996, 262144, 3, 851997, 262144, 3, 786461, 262144, 3, 720925, 262144, 3, 655389, 262144, 3, 786462, 262144, 3, 786463, 262144, 3, 786464, 262144, 3, 1048601, 262144, 3, 1048602, 262144, 3, 983065, 262144, 3, 1572889, 262144, 3, 1572888, 262144, 3, 1572887, 262144, 3, 1507349, 262144, 3, 1638424, 262144, 3, 1572877, 262144, 3, 1638413, 262144, 3, 1638414, 262144, 3, 1638415, 262144, 3, 1703951, 262144, 3, 1703948, 262144, 3, 1638412, 262144, 3, 458781, 262144, 3, 458782, 262144, 3, 458783, 262144, 3, 458784, 262144, 3, 393248, 262144, 3, 65572, 262144, 3, 131108, 262144, 3, 196644, 262144, 3, 262180, 262144, 3, 327716, 262144, 3, 393252, 262144, 3, 458788, 262144, 3, 65576, 262144, 3, 131112, 262144, 3, 196648, 262144, 3, 262184, 262144, 3, 327720, 262144, 3, 393256, 262144, 3, 458792, 262144, 3, 131117, 262144, 3, 196653, 262144, 3, 262189, 262144, 3, 327724, 262144, 3, 393260, 262144, 3, 458796, 262144, 3, 524332, 262144, 3, 65584, 262144, 3, 131120, 262144, 3, 196656, 262144, 3, 262192, 262144, 3, 327728, 262144, 3, 327729, 262144, 3, 393265, 262144, 3, 393266, 262144, 3, 458802, 262144, 3, 65588, 262144, 3, 131125, 262144, 3, 196661, 262144, 3, 262197, 262144, 3, 262198, 262144, 3, 327734, 262144, 3, 393270, 262144, 3, 458806, 262144, 3, 524342, 262144, 3, 65593, 262144, 3, 131129, 262144, 3, 196665, 262144, 3, 262201, 262144, 3, 262202, 262144, 3, 262203, 262144, 3, 327739, 262144, 3, 327740, 262144, 3, 327741, 262144, 3, 65598, 262144, 3, 131134, 262144, 3, 196670, 262144, 3, 196671, 262144, 3, 262207, 262144, 3, 327743, 262144, 3, 65601, 262144, 3, 131137, 262144, 3, 196673, 262144, 3, 262209, 262144, 3, 327745, 262144, 3, 327746, 262144, 3, 393282, 262144, 3, 393281, 262144, 3, 458817, 262144, 3, 524353, 262144, 3, 589889, 262144, 3, 589888, 262144, 3, 655424, 262144, 3, 720960, 262144, 3, 131140, 262144, 3, 196677, 262144, 3, 262213, 262144, 3, 262214, 262144, 3, 327750, 262144, 3, 327749, 262144, 3, 393285, 262144, 3, 458821, 262144, 3, 589890, 262144, 3, 655426, 262144, 3, 655427, 262144, 3, 720964, 262144, 3, 786500, 262144, 3, 786501, 262144, 3, 852037, 262144, 3, 983103, 262144, 3, 1048639, 262144, 3, 1048640, 262144, 3, 1114177, 262144, 3, 1114178, 262144, 3, 1179714, 262144, 3, 1179715, 262144, 3, 1507391, 262144, 3, 1507392, 262144, 3, 1572928, 262144, 3, 1572929, 262144, 3, 1638466, 262144, 3, 1704002, 262144, 3, 1704003, 262144, 3, 1769539, 262144, 3, 1835075, 262144, 3, 1900611, 262144, 3, 1900610, 262144, 3, 1966146, 262144, 3, 1966145, 262144, 3, 1966144, 262144, 3, 2031680, 262144, 3, 2031679, 262144, 3, 2097215, 262144, 3, 2097214, 262144, 3, 1966132, 262144, 3, 2031669, 262144, 3, 2097205, 262144, 3, 2097206, 262144, 3, 2162742, 262144, 3, 2162743, 262144, 3, 2228279, 262144, 3, 2293815, 262144, 3, 2359351, 262144, 3, 2359350, 262144, 3, 2359349, 262144, 3, 2424885, 262144, 3, 2424884, 262144, 3, 2424883, 262144, 3, 2228281, 262144, 3, 2228282, 262144, 3, 2293819, 262144, 3, 2293820, 262144, 3, 2293821, 262144, 3, 2293822, 262144, 3, 2293823, 262144, 3, 2293824, 262144, 3, 2293825, 262144, 3, 2228289, 262144, 3, 2228290, 262144, 3, 2228291, 262144, 3, 2228292, 262144, 3, 2162756, 262144, 3, 1900598, 262144, 3, 1900599, 262144, 3, 1900600, 262144, 3, 1900601, 262144, 3, 1900602, 262144, 3, 1900603, 262144, 3, 1900604, 262144, 3, 1900605, 262144, 3, 1900606, 262144, 3, 2097200, 262144, 3, 2162736, 262144, 3, 2228272, 262144, 3, 2293808, 262144, 3, 2359344, 262144, 3, 2293806, 262144, 3, 2359342, 262144, 3, 2424878, 262144, 3, 2424877, 262144, 3, 2424876, 262144, 3, 2490405, 262144, 3, 2424869, 262144, 3, 2424868, 262144, 3, 2424867, 262144, 3, 2359334, 262144, 3, 1966104, 262144, 3, 1900568, 262144, 3, 1900567, 262144, 3, 2097175, 262144, 3, 2097176, 262144, 3, 2031637, 262144, 3, 2031636, 262144, 3, 2359313, 262144, 3, 2424849, 262144, 3, 2162707, 262144, 3, 2162706, 262144, 3, 1245191, 262144, 3, 1376267, 262144, 3, 1310731, 262144, 3, 1245195, 262144, 3, 1310732, 262144, 3, 1245196, 262144, 3, 1310730, 262144, 3, 1310729, 262144, 3, 1703954, 262144, 3, 1769490, 262144, 3, 1769489, 262144, 3, 1245203, 262144, 3, 1114131, 262144, 3, 1507331, 262144, 3, 1507330, 262144, 3, 917509, 262144, 3, 1376261, 262144, 3, 1310725, 262144, 3, 1769474, 262144, 3, 1769476, 262144, 3, 2490392, 262144, 3, 2424856, 262144, 3, 2359320, 262144, 3, 2490396, 262144, 3, 2424872, 262144, 3, 2424874, 262144, 3, 2424880, 262144, 3, 2293809, 262144, 3, 2293810, 262144, 3, 2293811, 262144, 3, 2162740, 262144, 3, 2162739, 262144, 3, 2162738, 262144, 3, 1966130, 262144, 3, 1966131, 262144, 3, 1835059, 262144, 3, 1835060, 262144, 3, 1835061, 262144, 3, 1966133, 262144, 3, 2293817, 262144, 3, 2359353, 262144, 3, 2424889, 262144, 3, 2490425, 262144, 3, 2424887, 262144, 3, 2490423, 262144, 3, 2359356, 262144, 3, 2359357, 262144, 3, 2359358, 262144, 3, 2359359, 262144, 3, 2359360, 262144, 3, 2359361, 262144, 3, 2424897, 262144, 3, 2293828, 262144, 3, 2359364, 262144, 3, 2424900, 262144, 3, 2424899, 262144, 3, 2162757, 262144, 3, 1966147, 262144, 3, 2031683, 262144, 3, 1966138, 262144, 3, 2031674, 262144, 3, 2097210, 262144, 3, 2097209, 262144, 3, 2097211, 262144, 3, 2097212, 262144, 3, 2097207, 262144, 3, 2031671, 262144, 3, 1572920, 262144, 3, 1638456, 262144, 3, 1703992, 262144, 3, 1703993, 262144, 3, 786476, 262144, 3, 720940, 262144, 3, 720941, 262144, 3, 720942, 262144, 3, 655406, 262144, 3, 852006, 262144, 3, 852007, 262144, 3, 852008, 262144, 3, 852009, 262144, 3, 786472, 262144, 3, 720936, 262144, 3, 655400, 262144, 3, 589864, 262144, 3, 589861, 262144, 3, 589862, 262144, 3, 589863, 262144, 3, 327717, 262144, 3, 262183, 262144, 3, 196645, 262144, 3, 131109, 262144, 3, 131110, 262144, 3, 458790, 262144, 3, 524326, 262144, 3, 393258, 262144, 3, 327722, 262144, 3, 262186, 262144, 3, 196650, 262144, 3, 196651, 262144, 3, 196652, 262144, 3, 131114, 262144, 3, 393262, 262144, 3, 262191, 262144, 3, 262190, 262144, 3, 327726, 262144, 3, 524336, 262144, 3, 589872, 262144, 3, 655408, 262144, 3, 589873, 262144, 3, 589874, 262144, 3, 589875, 262144, 3, 589876, 262144, 3, 262195, 262144, 3, 196659, 262144, 3, 196658, 262144, 3, 196657, 262144, 3, 131126, 262144, 3, 131127, 262144, 3, 393272, 262144, 3, 262199, 262144, 3, 131131, 262144, 3, 131130, 262144, 3, 131132, 262144, 3, 262211, 262144, 3, 589892, 262144, 3, 524347, 262144, 3, 524351, 262144, 3, 655415, 262144, 3, 655414, 262144, 3, 720950, 262144, 3, 786485, 262144, 3, 786489, 262144, 3, 786490, 262144, 3, 786491, 262144, 3, 786488, 262144, 3, 983099, 262144, 3, 917563, 262144, 3, 1048635, 262144, 3, 1114171, 262144, 3, 1179707, 262144, 3, 1507379, 262144, 3, 1507380, 262144, 3, 1638451, 262144, 3, 1703986, 262144, 3, 1703988, 262144, 3, 1703987, 262144, 3, 1310782, 262144, 3, 1245246, 262144, 3, 1245247, 262144, 3, 1179711, 262144, 3, 1114175, 262144, 3, 1114176, 262144, 3, 1376321, 262144, 3, 1441857, 262144, 3, 1507393, 262144, 3, 852034, 262144, 3, 917570, 262144, 3, 983106, 262144, 3, 1048642, 262144, 3, 852031, 262144, 3, 852032, 262144, 3, 852033, 262144, 3, 983110, 262144, 3, 983109, 262144, 3, 983108, 262144, 3, 1048644, 262144, 3, 1310788, 262144, 3, 1310789, 262144, 3, 1310790, 262144, 3, 1179718, 262144, 3, 1179717, 262144, 3, 1441859, 262144, 3, 1441860, 262144, 3, 1441861, 262144, 3, 1507397, 262144, 3, 1572933, 262144, 3, 1638469, 262144, 3, 1704005, 262144, 3, 1704006, 262144, 3, 1507396, 262144, 3, 1966150, 262144, 3, 1966149, 262144, 3, 1900613, 262144, 3, 1835077, 262144, 3, 1703998, 262144, 3, 1703999, 262144, 3, 1704000, 262144, 3, 1704001, 262144, 3, 1900609, 262144, 3, 1835073, 262144, 3, 1835072, 262144, 3, 1900608, 262144, 3)

[node name="Player" parent="." instance=ExtResource("2_dooct")]
position = Vector2(525, 340)
scale = Vector2(0.2, 0.2)

[node name="Exit_to_2" type="Area2D" parent="."]
script = ExtResource("3_352qg")

[node name="Sprite2D" type="Sprite2D" parent="Exit_to_2"]
position = Vector2(-10, 120)
scale = Vector2(0.00304167, 0.00433333)
texture = ExtResource("3_fldpb")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Exit_to_2"]
polygon = PackedVector2Array(-19, 107, -2, 107, -1, 133, -19, 133)

[node name="Exit_to_Lost" type="Area2D" parent="."]
script = ExtResource("3_352qg")

[node name="Sprite2D" type="Sprite2D" parent="Exit_to_Lost"]
position = Vector2(531, 687)
scale = Vector2(0.0140769, 0.0171111)
texture = ExtResource("5_v8xot")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Exit_to_Lost"]
polygon = PackedVector2Array(479, 647, 574, 649, 575, 724, 485, 722)

[node name="Exit_to_Lost2" type="Area2D" parent="."]
script = ExtResource("3_352qg")

[node name="Sprite2D" type="Sprite2D" parent="Exit_to_Lost2"]
position = Vector2(531, 687)
scale = Vector2(0.0140769, 0.0171111)
texture = ExtResource("5_v8xot")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Exit_to_Lost2"]
position = Vector2(673, -642)
polygon = PackedVector2Array(485, 644, 574, 649, 575, 724, 485, 722)

[connection signal="body_entered" from="Exit_to_2" to="Exit_to_2" method="_on_body_entered"]
[connection signal="body_entered" from="Exit_to_Lost" to="Exit_to_Lost" method="_on_body_entered"]
[connection signal="body_entered" from="Exit_to_Lost2" to="Exit_to_Lost2" method="_on_body_entered"]
